update: add new strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">kotlinfiap</string>
+    <string name="app_title">Is Under Development</string>
+    <string name="app_subtitle">THE GREATEST APP OF ALL TIME</string>
+    <string name="button_red_pill">Take Red Pill</string>
+    <string name="button_blue_pill">Take Blue Pill</string>
 </resources>
