update: extract text to string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="app_subtitle">THE GREATEST APP OF ALL TIME</string>
     <string name="button_sign_up">Sign Up</string>
     <string name="button_sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="create_account">Create New Account</string>
 </resources>
